--- a/SnowfallEngine/SnowfallEngine.vcxproj.filters
+++ b/SnowfallEngine/SnowfallEngine.vcxproj.filters
@@ -13,9 +13,6 @@
     <Filter Include="OpenGL">
       <UniqueIdentifier>{4c41ca37-f459-46a7-baab-b569e6b49680}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Physics">
-      <UniqueIdentifier>{347abc65-dfc9-4795-b75b-2737dd36a5ff}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Rendering">
       <UniqueIdentifier>{a90febac-df4f-487b-a0de-d9f014477325}</UniqueIdentifier>
     </Filter>
@@ -43,6 +40,21 @@
     <Filter Include="UI\Components">
       <UniqueIdentifier>{0c1094cb-294b-4889-996e-6c0cc0468163}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Components\Camera">
+      <UniqueIdentifier>{fa792155-e2ed-4415-a714-e447b16c0053}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Components\Lighting">
+      <UniqueIdentifier>{90a512dc-a4c3-4c36-8808-4f8354fd1852}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Components\Mesh">
+      <UniqueIdentifier>{3544cd3a-3950-4407-a9fc-ab669ea5ec5b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Components\Multipurpose">
+      <UniqueIdentifier>{80c8a613-1f0b-42a7-9639-2158a5f3bcf1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Components\Physics">
+      <UniqueIdentifier>{c1d1e8e7-a0bd-4468-ba48-bec733f5fe60}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -56,12 +68,6 @@
     </ClCompile>
     <ClCompile Include="Buffer.cpp">
       <Filter>OpenGL</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraComponent.cpp">
-      <Filter>Components</Filter>
-    </ClCompile>
-    <ClCompile Include="CollisionShape.cpp">
-      <Filter>Physics</Filter>
     </ClCompile>
     <ClCompile Include="CommandBuffer.cpp">
       <Filter>OpenGL</Filter>
@@ -98,9 +104,6 @@
     </ClCompile>
     <ClCompile Include="MeshAsset.cpp">
       <Filter>Assets</Filter>
-    </ClCompile>
-    <ClCompile Include="MeshComponent.cpp">
-      <Filter>Components</Filter>
     </ClCompile>
     <ClCompile Include="MeshManager.cpp">
       <Filter>Rendering</Filter>
@@ -144,9 +147,6 @@
     <ClCompile Include="VertexArray.cpp">
       <Filter>OpenGL</Filter>
     </ClCompile>
-    <ClCompile Include="TransformComponent.cpp">
-      <Filter>Components</Filter>
-    </ClCompile>
     <ClCompile Include="TextureAsset.cpp">
       <Filter>Assets</Filter>
     </ClCompile>
@@ -159,23 +159,8 @@
     <ClCompile Include="RenderTargetAsset.cpp">
       <Filter>Assets</Filter>
     </ClCompile>
-    <ClCompile Include="LightComponent.cpp">
-      <Filter>Components</Filter>
-    </ClCompile>
     <ClCompile Include="InputManager.cpp">
       <Filter>Input</Filter>
-    </ClCompile>
-    <ClCompile Include="ShadowMapRenderSystem.cpp">
-      <Filter>Components</Filter>
-    </ClCompile>
-    <ClCompile Include="SkyboxComponent.cpp">
-      <Filter>Components</Filter>
-    </ClCompile>
-    <ClCompile Include="PostProcessRenderSystem.cpp">
-      <Filter>Components</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraViewportRenderSystem.cpp">
-      <Filter>Components</Filter>
     </ClCompile>
     <ClCompile Include="TextRenderer.cpp">
       <Filter>Rendering</Filter>
@@ -200,9 +185,6 @@
     </ClCompile>
     <ClCompile Include="UIContext.cpp">
       <Filter>UI</Filter>
-    </ClCompile>
-    <ClCompile Include="CameraUIRenderSystem.cpp">
-      <Filter>Components</Filter>
     </ClCompile>
     <ClCompile Include="UITextBox.cpp">
       <Filter>UI\Components</Filter>
@@ -243,6 +225,39 @@
     <ClCompile Include="UIViewport.cpp">
       <Filter>UI\Components</Filter>
     </ClCompile>
+    <ClCompile Include="CameraComponent.cpp">
+      <Filter>Components\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="CameraUIRenderSystem.cpp">
+      <Filter>Components\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="CameraViewportRenderSystem.cpp">
+      <Filter>Components\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="LightComponent.cpp">
+      <Filter>Components\Lighting</Filter>
+    </ClCompile>
+    <ClCompile Include="ShadowMapRenderSystem.cpp">
+      <Filter>Components\Lighting</Filter>
+    </ClCompile>
+    <ClCompile Include="MeshComponent.cpp">
+      <Filter>Components\Mesh</Filter>
+    </ClCompile>
+    <ClCompile Include="TransformComponent.cpp">
+      <Filter>Components\Multipurpose</Filter>
+    </ClCompile>
+    <ClCompile Include="PostProcessRenderSystem.cpp">
+      <Filter>Components\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="SkyboxComponent.cpp">
+      <Filter>Components\Camera</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicsWorldSystem.cpp">
+      <Filter>Components\Physics</Filter>
+    </ClCompile>
+    <ClCompile Include="PhysicsRigidBodySystem.cpp">
+      <Filter>Components\Physics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="export.h">
@@ -256,12 +271,6 @@
     </ClInclude>
     <ClInclude Include="Buffer.h">
       <Filter>OpenGL</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraComponent.h">
-      <Filter>Components</Filter>
-    </ClInclude>
-    <ClInclude Include="CollisionShape.h">
-      <Filter>Physics</Filter>
     </ClInclude>
     <ClInclude Include="CommandBuffer.h">
       <Filter>OpenGL</Filter>
@@ -298,9 +307,6 @@
     </ClInclude>
     <ClInclude Include="MeshAsset.h">
       <Filter>Assets</Filter>
-    </ClInclude>
-    <ClInclude Include="MeshComponent.h">
-      <Filter>Components</Filter>
     </ClInclude>
     <ClInclude Include="MeshManager.h">
       <Filter>Rendering</Filter>
@@ -347,9 +353,6 @@
     <ClInclude Include="VertexArray.h">
       <Filter>OpenGL</Filter>
     </ClInclude>
-    <ClInclude Include="TransformComponent.h">
-      <Filter>Components</Filter>
-    </ClInclude>
     <ClInclude Include="TextureAsset.h">
       <Filter>Assets</Filter>
     </ClInclude>
@@ -362,26 +365,11 @@
     <ClInclude Include="RenderTargetAsset.h">
       <Filter>Assets</Filter>
     </ClInclude>
-    <ClInclude Include="LightComponent.h">
-      <Filter>Components</Filter>
-    </ClInclude>
     <ClInclude Include="InputManager.h">
       <Filter>Input</Filter>
     </ClInclude>
     <ClInclude Include="InputEnums.h">
       <Filter>Input</Filter>
-    </ClInclude>
-    <ClInclude Include="ShadowMapRenderSystem.h">
-      <Filter>Components</Filter>
-    </ClInclude>
-    <ClInclude Include="SkyboxComponent.h">
-      <Filter>Components</Filter>
-    </ClInclude>
-    <ClInclude Include="PostProcessRenderSystem.h">
-      <Filter>Components</Filter>
-    </ClInclude>
-    <ClInclude Include="CameraViewportRenderSystem.h">
-      <Filter>Components</Filter>
     </ClInclude>
     <ClInclude Include="TextRenderer.h">
       <Filter>Rendering</Filter>
@@ -419,9 +407,6 @@
     <ClInclude Include="UIContext.h">
       <Filter>UI</Filter>
     </ClInclude>
-    <ClInclude Include="CameraUIRenderSystem.h">
-      <Filter>Components</Filter>
-    </ClInclude>
     <ClInclude Include="UITextBox.h">
       <Filter>UI\Components</Filter>
     </ClInclude>
@@ -457,6 +442,39 @@
     </ClInclude>
     <ClInclude Include="UIViewport.h">
       <Filter>UI\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraComponent.h">
+      <Filter>Components\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraUIRenderSystem.h">
+      <Filter>Components\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="CameraViewportRenderSystem.h">
+      <Filter>Components\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="LightComponent.h">
+      <Filter>Components\Lighting</Filter>
+    </ClInclude>
+    <ClInclude Include="ShadowMapRenderSystem.h">
+      <Filter>Components\Lighting</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshComponent.h">
+      <Filter>Components\Mesh</Filter>
+    </ClInclude>
+    <ClInclude Include="TransformComponent.h">
+      <Filter>Components\Multipurpose</Filter>
+    </ClInclude>
+    <ClInclude Include="PostProcessRenderSystem.h">
+      <Filter>Components\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="SkyboxComponent.h">
+      <Filter>Components\Camera</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsWorldSystem.h">
+      <Filter>Components\Physics</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsRigidBodySystem.h">
+      <Filter>Components\Physics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
